# fastapi_suren2

./: .gitignore  README.md  db_helper.py  docker-compose.yaml  pyproject.toml
core/: config.py
fastapi-application/: main.py
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: 2025_12_03_1316-9a18aa8885e7_create_users_table.py  2025_12_03_1323-a9f2f718127e_update_users_table.py  2025_12_04_1038-1014f4a2884c_create_users_table.py  2025_12_04_1120-eb73e0ecab75_create_access_tokens_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  auth.py  dependencies_examples.py  fastapi_users.py  messages.py  users.py
fastapi-application/api/dependencies/: access_tokens.py  backend.py  fastapi_users.py  strategy.py  user_manager.py  users.py
fastapi-application/api/webhooks/: user.py
fastapi-application/core/: __init__.py  config.py  taskiq_broker.py
fastapi-application/core/authentication/: user_manager.py
fastapi-application/core/models/: access_token.py  base.py  user.py
fastapi-application/core/schemas/: user.py
fastapi-application/crud/: users.py
fastapi-application/mailing/: send_email.py  send_welcome_email.py
fastapi-application/tasks/: __init__.py  welcome_email_notification.py
fastapi-application/templates/: base.html  index.html
fastapi-application/templates/users/: list.html
fastapi-application/utils/: case_converter.py  helper.py
fastapi-application/utils/webhooks/: user.py
fastapi-application/views/users/: views.py
(+2 files in other folders)
