[project]
name = "fastapisuren2"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Tsvetkov",email = "tsvetkov.frost@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.123.5,<0.124.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]

[dependency-groups]
dev = [
    "blank (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
